@@ -1,3 +1,8 @@
+2011-04-06  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Frameworks/StepTalk/STObjCRuntime.m: replace runtime specific typed
+	selector code with the standard gnustep functions.
+
 2011-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
 	* Frameworks/StepTalk/STLanguageManager.m (-dealloc): Fix
